<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.AppFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:id="@+id/relative_header"
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="3dp"
            android:layout_toEndOf="@+id/imageView2"
            android:text="0.3-BETA RELEASE"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="68dp"
            android:layout_marginBottom="22dp"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_below="@id/relative_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/admin_panel" />

        <Button
            android:gravity="start|center"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_marginStart="2dp"
            android:textAllCaps="false"
            android:id="@+id/btn_upload"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/upload"
            android:drawableStart="@drawable/ic_upload_outline" />
        <Button
            android:gravity="start|center"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_marginStart="2dp"
            android:textAllCaps="false"
            android:id="@+id/btn_firebase"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/launch_firebase"
            android:drawableStart="@drawable/ic_lock"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/app_name" />

        <Button
            android:gravity="start|center"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_marginStart="2dp"
            android:textAllCaps="false"
            android:id="@+id/btn_history"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/history"
            android:drawableStart="@drawable/ic_history"/>

        <Button
            android:gravity="start|center"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_marginStart="2dp"
            android:textAllCaps="false"
            android:id="@+id/btn_downloaded"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/downloads"
            android:drawableStart="@drawable/ic_download"/>

        <TextView
            android:gravity="start|center"
            android:layout_marginStart="2dp"
            android:textAllCaps="false"
            android:id="@+id/txt_idk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app" />

        <Button
            android:gravity="start|center"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_marginStart="2dp"
            android:textAllCaps="false"
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/settings"
            android:drawableStart="@drawable/ic_settings_outline" />

        <Button
            android:gravity="start|center"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_marginStart="2dp"
            android:textAllCaps="false"
            android:id="@+id/btn_info"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:drawableStart="@drawable/ic_information_outline"
            android:text="@string/about" />
    </LinearLayout>
</RelativeLayout>