<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AboutActivity"
    tools:showIn="@layout/activity_about">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:gravity="center|top"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/txt_blackwater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Blackwater"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follow_us"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|top"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btn_website"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@color/colorPrimary"
                        app:srcCompat="@drawable/ic_web" />

                    <ImageButton
                        android:id="@+id/btn_email"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@color/colorAccent"
                        app:srcCompat="@drawable/fui_ic_mail_white_24dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|top"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btn_instagram"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@color/instagram_purple"
                        app:srcCompat="@drawable/ic_instagram" />

                    <ImageButton
                        android:id="@+id/btn_twitter"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@color/twitter_blue"
                        app:srcCompat="@drawable/ic_twitter" />

                    <ImageButton
                        android:id="@+id/btn_facebook"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@color/facebook_blue"
                        app:srcCompat="@drawable/ic_facebook" />

                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:layout_margin="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_ygz"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:padding="4dp"
                    android:src="@drawable/ic_ygz" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="20dp"
                    android:layout_toEndOf="@+id/img_ygz"
                    android:text="@string/developer_name"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView6"
                    android:layout_marginStart="1dp"
                    android:layout_toEndOf="@+id/img_ygz"
                    android:text="Developer, Database" />

                <ImageButton
                    android:background="@color/facebook_blue"
                    android:id="@+id/btn_facebook_ygz"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    app:srcCompat="@drawable/ic_facebook_box" />

                <ImageButton
                    android:background="@color/twitter_blue"
                    android:id="@+id/btn_twitter_ygz"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignParentBottom="true"
                    android:layout_toStartOf="@+id/btn_facebook_ygz"
                    app:srcCompat="@drawable/ic_twitter" />

                <ImageButton
                    android:background="@color/colorAccent"
                    android:id="@+id/btn_email_ygz"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="0dp"
                    android:layout_toStartOf="@+id/ig_ygz"
                    app:srcCompat="@drawable/fui_ic_mail_white_24dp" />

                <ImageButton
                    android:background="@color/instagram_purple"
                    android:id="@+id/ig_ygz"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignBottom="@+id/img_ygz"
                    android:layout_toStartOf="@id/btn_twitter_ygz"
                    app:srcCompat="@drawable/ic_instagram" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:layout_margin="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_ege"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:padding="4dp"
                    android:src="@drawable/ic_ege" />

                <TextView
                    android:id="@+id/txt_ege"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:layout_toEndOf="@+id/img_ege"
                    android:text="Ege Bıçakcı"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txt_desgin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_ege"
                    android:layout_toEndOf="@+id/img_ege"
                    android:text="App idea, Social, Desginer" />

                <ImageButton
                    android:background="@color/facebook_blue"
                    android:id="@+id/btn_facebook_ege"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    app:srcCompat="@drawable/ic_facebook_box" />

                <ImageButton
                    android:background="@color/twitter_blue"
                    android:id="@+id/btn_twitter_ege"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignParentBottom="true"
                    android:layout_toStartOf="@+id/btn_facebook_ege"
                    app:srcCompat="@drawable/ic_twitter" />

                <ImageButton
                    android:id="@+id/btn_email_ege"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="0dp"
                    android:layout_toStartOf="@+id/btn_ig_ege"
                    android:background="@color/colorAccent"
                    app:srcCompat="@drawable/fui_ic_mail_white_24dp" />

                <ImageButton
                    android:background="@color/instagram_purple"
                    android:id="@+id/btn_ig_ege"
                    android:layout_toStartOf="@+id/btn_twitter_ege"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignParentBottom="true"
                    app:srcCompat="@drawable/ic_instagram" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btn_log"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_margin="4dp"
            android:drawableStart="@drawable/ic_information_outline"
            android:text="@string/change_log"
            android:textAllCaps="false" />
        <Button
            android:id="@+id/btn_osl"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_margin="4dp"
            android:drawableStart="@drawable/ic_information_outline"
            android:text="@string/oss"
            android:textAllCaps="false" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>